[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/testing/test-mech/hud/WeaponPanel.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/hud/NotoSansHUD.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.490196 )

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_right = 1
border_color = Color( 0, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false
border_width_right = 1
border_color = Color( 0, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false
border_width_right = 1
border_color = Color( 0, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false
border_width_right = 1
border_color = Color( 0, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]
draw_center = false
border_width_right = 1
border_color = Color( 0, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
draw_center = false
border_width_top = 2
border_width_bottom = 2
border_color = Color( 0, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=8]
draw_center = false
border_width_left = 2
border_width_right = 2
border_color = Color( 0, 1, 1, 1 )

[node name="WeaponPanel" type="Panel"]
margin_right = 560.0
margin_bottom = 26.0
rect_min_size = Vector2( 560, 26 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="Separators" type="HBoxContainer" parent="."]
visible = false
margin_right = 560.0
margin_bottom = 26.0
rect_min_size = Vector2( 560, 26 )

[node name="Mount" type="Panel" parent="Separators"]
modulate = Color( 1, 1, 1, 0.25098 )
margin_right = 30.0
margin_bottom = 26.0
rect_min_size = Vector2( 30, 26 )
custom_styles/panel = SubResource( 2 )

[node name="Name" type="Panel" parent="Separators"]
modulate = Color( 1, 1, 1, 0.25098 )
margin_left = 34.0
margin_right = 234.0
margin_bottom = 26.0
rect_min_size = Vector2( 200, 26 )
custom_styles/panel = SubResource( 3 )

[node name="Range" type="Panel" parent="Separators"]
modulate = Color( 1, 1, 1, 0.25098 )
margin_left = 238.0
margin_right = 288.0
margin_bottom = 26.0
rect_min_size = Vector2( 50, 26 )
custom_styles/panel = SubResource( 4 )

[node name="Ammo" type="Panel" parent="Separators"]
modulate = Color( 1, 1, 1, 0.25098 )
margin_left = 292.0
margin_right = 352.0
margin_bottom = 26.0
rect_min_size = Vector2( 60, 26 )
custom_styles/panel = SubResource( 5 )

[node name="Cooldown" type="Panel" parent="Separators"]
modulate = Color( 1, 1, 1, 0.25098 )
margin_left = 356.0
margin_right = 410.0
margin_bottom = 26.0
rect_min_size = Vector2( 54, 26 )
custom_styles/panel = SubResource( 6 )

[node name="WeaponSelection" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 7 )

[node name="GroupSelection" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_right = 560.0
margin_bottom = 26.0
rect_min_size = Vector2( 560, 26 )

[node name="Padding" type="Control" parent="GroupSelection"]
margin_right = 406.0
margin_bottom = 26.0
rect_min_size = Vector2( 406, 26 )

[node name="Group1" type="Control" parent="GroupSelection"]
editor/display_folded = true
margin_left = 410.0
margin_right = 430.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 26 )

[node name="Selected" type="Panel" parent="GroupSelection/Group1"]
visible = false
margin_right = 20.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 26 )
custom_styles/panel = SubResource( 8 )

[node name="Group2" type="Control" parent="GroupSelection"]
editor/display_folded = true
margin_left = 434.0
margin_right = 454.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 26 )

[node name="Selected" type="Panel" parent="GroupSelection/Group2"]
visible = false
margin_right = 20.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 26 )
custom_styles/panel = SubResource( 8 )

[node name="Group3" type="Control" parent="GroupSelection"]
editor/display_folded = true
margin_left = 458.0
margin_right = 478.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 26 )

[node name="Selected" type="Panel" parent="GroupSelection/Group3"]
visible = false
margin_right = 20.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 26 )
custom_styles/panel = SubResource( 8 )

[node name="Group4" type="Control" parent="GroupSelection"]
editor/display_folded = true
margin_left = 482.0
margin_right = 502.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 26 )

[node name="Selected" type="Panel" parent="GroupSelection/Group4"]
visible = false
margin_right = 20.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 26 )
custom_styles/panel = SubResource( 8 )

[node name="Group5" type="Control" parent="GroupSelection"]
editor/display_folded = true
margin_left = 506.0
margin_right = 526.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 26 )

[node name="Selected" type="Panel" parent="GroupSelection/Group5"]
visible = false
margin_right = 20.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 26 )
custom_styles/panel = SubResource( 8 )

[node name="Group6" type="Control" parent="GroupSelection"]
editor/display_folded = true
margin_left = 530.0
margin_right = 550.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 26 )

[node name="Selected" type="Panel" parent="GroupSelection/Group6"]
visible = false
margin_right = 20.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 26 )
custom_styles/panel = SubResource( 8 )

[node name="Elements" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -320.0
rect_min_size = Vector2( 560, 26 )

[node name="MountIcon" type="Control" parent="Elements"]
editor/display_folded = true
margin_right = 30.0
margin_bottom = 26.0
rect_min_size = Vector2( 30, 26 )

[node name="Position2D" type="Position2D" parent="Elements/MountIcon"]
position = Vector2( 15, 13 )

[node name="Name" type="Label" parent="Elements"]
margin_left = 34.0
margin_right = 234.0
margin_bottom = 26.0
rect_min_size = Vector2( 200, 26 )
custom_fonts/font = ExtResource( 2 )
text = "Gauss Rifle"

[node name="Range" type="Label" parent="Elements"]
margin_left = 238.0
margin_right = 288.0
margin_bottom = 26.0
rect_min_size = Vector2( 50, 26 )
custom_fonts/font = ExtResource( 2 )
text = "500m"

[node name="Ammo" type="Label" parent="Elements"]
margin_left = 292.0
margin_right = 352.0
margin_bottom = 26.0
rect_min_size = Vector2( 60, 26 )
custom_fonts/font = ExtResource( 2 )
text = "300"

[node name="Cooldown" type="Control" parent="Elements"]
margin_left = 356.0
margin_right = 406.0
margin_bottom = 26.0
rect_min_size = Vector2( 50, 26 )

[node name="Background" type="Line2D" parent="Elements/Cooldown"]
modulate = Color( 1, 1, 1, 0.360784 )
position = Vector2( 0, 13 )
points = PoolVector2Array( 0, 0, 50, 0 )
width = 7.0
default_color = Color( 0.560784, 0, 0, 1 )

[node name="CooldownBar" type="Line2D" parent="Elements/Cooldown"]
position = Vector2( 0, 13 )
points = PoolVector2Array( 0, 0, 50, 0 )
width = 7.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 523010752

[node name="Group1" type="Label" parent="Elements"]
margin_left = 410.0
margin_right = 430.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 26 )
custom_fonts/font = ExtResource( 2 )
text = "1"
align = 1
valign = 1

[node name="Group2" type="Label" parent="Elements"]
margin_left = 434.0
margin_right = 454.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 26 )
custom_fonts/font = ExtResource( 2 )
text = "2"
align = 1
valign = 1

[node name="Group3" type="Label" parent="Elements"]
margin_left = 458.0
margin_right = 478.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 26 )
custom_fonts/font = ExtResource( 2 )
text = "3"
align = 1
valign = 1

[node name="Group4" type="Label" parent="Elements"]
margin_left = 482.0
margin_right = 502.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 26 )
custom_fonts/font = ExtResource( 2 )
text = "4"
align = 1
valign = 1

[node name="Group5" type="Label" parent="Elements"]
margin_left = 506.0
margin_right = 526.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 26 )
custom_fonts/font = ExtResource( 2 )
text = "5"
align = 1
valign = 1

[node name="Group6" type="Label" parent="Elements"]
margin_left = 530.0
margin_right = 550.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 26 )
custom_fonts/font = ExtResource( 2 )
text = "6"
align = 1
valign = 1

